--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.4",
     "clean-webpack-plugin": "^4.0.0",
+    "core-js": "^3.21.1",
     "css-loader": "^6.7.1",
     "cssnano": "^5.1.5",
     "html-webpack-plugin": "^5.5.0",
@@ -36,8 +37,5 @@
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
-  },
-  "dependencies": {
-    "core-js": "^3.21.1"
   }
 }
